force-app/main/default/objects/Case/fields/Action_Item__c.field-meta.xml
<CustomField>
    <fullName>Action_Item__c</fullName>
    <label>Action Item</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Removed</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>